Make sure <main> is always present

--- a/themes/notes/layouts/_default/list.html
+++ b/themes/notes/layouts/_default/list.html
@@ -1,20 +1,18 @@
-{{ define "content" }}
-<main>
-    <article>
-        <header class="list-header">
-            <h1>{{ .Title }}</h1>
+{{ define "main" }}
+<article>
+    <header class="list-header">
+        <h1>{{ .Title }}</h1>
+    </header>
+    {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
+    {{ range $pages.ByDate.Reverse }}
+    <article class="list-item-article">
+        <header class="list-item-header">
+            <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+            <div>
+                <time datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "2006-01-02" }}</time>
+            </div>
         </header>
-        {{ $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
-        {{ range $pages.ByDate.Reverse }}
-        <article class="list-item-article">
-            <header class="list-item-header">
-                <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-                <div>
-                    <time datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "2006-01-02" }}</time>
-                </div>
-            </header>
-        </article>
-        {{ end }}
     </article>
-</main>
+    {{ end }}
+</article>
 {{ end }}
