--- a/themes/notes/layouts/_default/baseof.html
+++ b/themes/notes/layouts/_default/baseof.html
@@ -18,7 +18,10 @@
                 <a href='{{ref . "about"}}'>About</a>
             </nav>
         </header>
-        {{- block "content" . }}{{- end }}
+
+        <main role="main">
+            {{- block "main" . }}{{- end }}
+        </main>
     </div>
 </body>
 
