--- a/themes/notes/layouts/_default/single.html
+++ b/themes/notes/layouts/_default/single.html
@@ -1,14 +1,12 @@
-{{ define "content" }}
-<main>
-    <article class="single-article">
-        <header class="single-header">
-            <h1>{{ .Title }}</h1>
-            <div>
-                <time datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "2006-01-02" }}</time>
-            </div>
-        </header>
+{{ define "main" }}
+<article class="single-article">
+    <header class="single-header">
+        <h1>{{ .Title }}</h1>
+        <div>
+            <time datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "2006-01-02" }}</time>
+        </div>
+    </header>
 
-        {{ .Content }}
-    </article>
-</main>
+    {{ .Content }}
+</article>
 {{ end }}
